fix url too long on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@
 
 .homepage {
     color: #fcb208;
+    word-wrap: break-word;
 }
 .homepage:hover {
     color: #fcb208;
